--- a/layouts/partials/social_buttons_in_sidebar.html
+++ b/layouts/partials/social_buttons_in_sidebar.html
@@ -1,17 +1,12 @@
 <p class="social">
   {{ with .Site.Params.social.facebook }}
-  <a href="{{ . }}" data-animate-hover="pulse" class="external facebook">
+  <a href="https://www.facebook.com/wondertikitattoo/" data-animate-hover="pulse" class="external facebook">
     <i class="fa fa-facebook"></i>
   </a>
   {{end}}
   {{ with .Site.Params.social.instagram }}
-  <a href="{{ . }}" title="" class="external instagram">
+  <a href="https://www.instagram.com/wondertikitattoo/" title="" class="external instagram">
     <i class="fa fa-instagram"></i>
-  </a>
-  {{end}}
-  {{ with .Site.Params.social.email }}
-  <a href="mailto:{{ . }}" data-animate-hover="pulse" class="email">
-    <i class="fa fa-envelope"></i>
   </a>
   {{end}}
 
