Changing landing page description

--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -6,7 +6,7 @@
       <div class="content-column-content">
          <h1>{{ .Title }}</h1>
          {{ .Content }}
-         <h4>Puoi trovarci anche qui:</h4>
+         <h4>Ci trovi anche qui:</h4>
          {{ partial "social_buttons_in_contact.html" . }}
          {{ with .Site.Params.email }}
          <h4>Raccontaci la tua idea.</h4>
