--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -29,8 +29,8 @@
          </form>
          {{ end }}
       </div>
-      <center>{{ partial "social_buttons_in_contact.html" . }}
-        {{ with .Site.Params.email }}</center>
+      {{ partial "social_buttons_in_contact.html" . }}
+        {{ with .Site.Params.email }}
     </div>
   </div>
 </div>
