Last changes before delivering

--- a/layouts/partials/social_buttons_in_sidebar.html
+++ b/layouts/partials/social_buttons_in_sidebar.html
@@ -12,7 +12,7 @@
 
   {{ with .Site.Params.social.whatsapp }}
   <a href="{{ . }}" data-animate-hover="pulse" class="external">
-    <i class="fa fa-whatsapp"></i>
+    <i class="fa fa-whatsapp">+39 328 952 5747</i>
   </a>
   {{end}}
 </p>
